fix bug with overflow

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,5 +1,9 @@
 @import './_vars.scss';
-
+body{
+    &.active{
+        overflow: hidden;
+    }
+}
 .gen {
     width: 100%;
     display: flex;
@@ -200,7 +204,7 @@
             flex-wrap: wrap;
             align-items: center;
             width: 100%;
-            overflow: scroll;
+        
             background: #FFFFFF;
             box-shadow: 0px 10px 60px rgba(226, 236, 249, 0.5);
             border-radius: 30px;
@@ -208,7 +212,7 @@
 
             @media (max-width:768px) {
                 padding: 40px 20px;
-
+                overflow: scroll;
             }
 
             .info {
