--- a/styles/all.css
+++ b/styles/all.css
@@ -100,6 +100,10 @@ a {
   font-size: 14px;
 }
 
+body.active {
+  overflow: hidden;
+}
+
 .gen {
   width: 100%;
   display: flex;
@@ -258,7 +262,6 @@ a {
   flex-wrap: wrap;
   align-items: center;
   width: 100%;
-  overflow: scroll;
   background: #FFFFFF;
   box-shadow: 0px 10px 60px rgba(226, 236, 249, 0.5);
   border-radius: 30px;
@@ -267,6 +270,7 @@ a {
 @media (max-width: 768px) {
   .gen .content .dash-board {
     padding: 40px 20px;
+    overflow: scroll;
   }
 }
 .gen .content .dash-board .info__title {
